add all functions with all cruds needed